Fixed checkStyle and ErrorProne warns